--- a/src/styles.css
+++ b/src/styles.css
@@ -1,26 +1,13 @@
-.czi-form legend {
-  margin: 0 0 5px !important;
-  border: none;
-  padding: 0;
-  font-size: var(--czi-content-font-size-h2);
-  user-select: none;
-}
-
-.czi-image-url-editor-src-input-row input.czi-image-url-editor-src-input {
-  border: var(--czi-border-grey) !important;
-}
-
-.commentdiv {
+.czi-editor-frameset .molcmt-commentdiv {
   background: white;
   border: 1px solid grey;
   height: 575px;
   position: absolute;
-  right: 63px;
-  top: 57px;
+  top: 20px;
   width: 213px;
 }
 
-.problem {
+.czi-editor-frameset .molcmt-problem {
   background: #fdd;
   border-bottom: 1px solid #aed0e6;
   margin-bottom: -1px;
